--- a/Storytelling-Bootcamp.html
+++ b/Storytelling-Bootcamp.html
@@ -122,7 +122,7 @@
                 <div class="row lightbox-gallery">
                     <div class="col-lg-8">
                         <h2 class="title bottom_30">Storytelling Bootcamp</h2>
-                        <p>For almost 130 years, the National Geographic Society has funded groundbreaking scientists
+                        <p>For over 130 years, the National Geographic Society has funded groundbreaking scientists
                             and explorers and has helped them share their findings with the world. In an effort to
                             provide their grantees with the knowledge, and skills, to continue sharing their work; the
                             Storytelling Bootcamp initiative was created. These 'bootcamps' are workshops that teach the
