--- a/es-Galaxy.html
+++ b/es-Galaxy.html
@@ -65,13 +65,13 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="#portfolio">Portafolio</a>
+              <a href="es.html#portfolio">Portafolio</a>
             </li>
             <li class="scroll">
-              <a href="#about">Acerca de mi</a>
+              <a href="es.html#about">Acerca de mi</a>
             </li>
             <li class="scroll">
-              <a href="#resume">Currículum Vitae</a>
+              <a href="es.html#resume">Currículum Vitae</a>
             </li>
             <li class="scroll">
               <a href="#contact">Contacto</a>
@@ -418,7 +418,7 @@
 
 
 
-
+    <!-- Next -->
     <section>
       <div class="col align-self-center text-center top_30">
         <a class="next-link" href="es-USA-Today.html">
