--- a/es-USA-Today.html
+++ b/es-USA-Today.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-  <title>Peter Verastegui | Portfolio</title>
-  <meta charset="UTF-8" />
-  <meta name="description" content="Peter Verastegui's Portofolio" />
-  <meta name="keywords" content="personal, portfolio" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta property="og:title" content="Peter Verastegui's Portfolio" />
-  <meta property="og:image" content="img/works/work-1/work-1-Thumb-7.png" />
+  <title>Peter Verastegui | Portfalio</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="Portafolio de Peter Verastegui">
+  <meta name="keywords" content="Portfolio, personal, diseño, UI,UX, Animacion Digital">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Portafolio de Peter Verastegui" />
+  <meta property="og:image" content="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" />
+
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
   <link rel="stylesheet" href="css/style.css" />
 
   <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
 
-  <!-- FAVICON  -->
-  <link rel="shortcut icon" href="img/favico.ico" />
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="img/favico.ico">
 
   <!-- Font icons -->
   <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
   <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+
 </head>
 
 <body>
@@ -41,12 +43,13 @@
       </path>
     </svg>
   </div>
-
   <main>
-    <!-- Header
+
+
+    <!-- HEADER
 ================================================== -->
     <header>
-      <a href="index.html" class="logo float-left"></a>
+      <a href="es.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -62,16 +65,16 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="index.html#portfolio">Portfolio</a>
+              <a href="es.html#portfolio">Portafolio</a>
             </li>
             <li class="scroll">
-              <a href="index.html#about">About</a>
+              <a href="es.html#about">Acerca de mi</a>
             </li>
             <li class="scroll">
-              <a href="index.html#clients">Clients</a>
+              <a href="es.html#resume">Currículum Vitae</a>
             </li>
             <li class="scroll">
-              <a href="index.html#contact">Contact</a>
+              <a href="#contact">Contacto</a>
             </li>
           </ul>
         </div>
@@ -81,10 +84,12 @@
     <!-- Up to top -->
     <div class="uptotop">
       <div class="holder">
-        <span>Up to top</span>
+        <span>Ir arriba</span>
         <div class="arrow"></div>
       </div>
     </div>
+
+
 
     <!-- Hero Section - Start
 ================================================== -->
@@ -122,21 +127,21 @@
         <div class="row lightbox-gallery">
           <!-- project-detail Two Columns | Start -->
           <div class="col-lg-8">
-            <h2 class="title bottom_30">A brand refresh</h2>
-            <p>
-              As part of USA Today's 2017 brand-refresh my team created a
-              video graphics package to serve as a template for the
-              newspaper's online content. As the team created these graphics
-              we did an in-depth research and presented case studies of
-              companies such as Vox, CNN, Vice, AJ+, my team had a great
-              inspiration/research phase that led to valuable fidings.
-            </p>
+            <h2 class="title bottom_30">Actualizando una marca</h2>
+            <p>Como parte de la actualización del periódico nacional USA Today, Gannet me encargo a mi y a su equipo
+              creativo el desarrollo de un paquete de
+              gráficos que sirvieron de plantillas para el contenido que el periódico y sus afiliados publican en las
+              redes
+              sociales. Mientras creábamos estos gráficos el equipo y yo investigamos a profundidad la competencia,
+              entre las compañías que estudiamos estuvieron Vox, CNN, Vice, AJ+, etc. Mi equipo y yo descubrimos
+              esquemas importantes que decidimos seguir pero también creamos nuestros propios elementos que
+              complementaron la marca USA Today.</p>
           </div>
           <div class="col-lg-4">
-            <h2 class="title bottom_30">Credits</h2>
+            <h2 class="title bottom_30">Créditos</h2>
             <p>
-              Senior Art Director: Glenann Godden, <br />Designer: Peter
-              Verastegui, <br />Designer: Dylan Glenn
+              Directora de arte senior: Glenann Godden, <br />Desiñador: Peter
+              Verastegui, <br />Diseñador: Dylan Glenn
             </p>
           </div>
         </div>
@@ -147,10 +152,10 @@
     <section data-midnight="white">
       <div class="project-detail">
         <h3 class="text subtitle text-center">
-          Introducing new visual elements
+          Los nuevos elementos gráficos
         </h3>
         <p class="text-center padbot_30">
-          City maps, geometric shapes, and new colors
+          Mapas de ciudades, formas geométricas y nuevos colores
         </p>
 
         <div class="container">
@@ -193,8 +198,8 @@
       <div class="row">
         <div class="col-lg-12">
           <p class="text-center padding_90">
-            Gannett's business has two markets, a local and a national. The
-            refresh had to work with both markets
+            Gannett tiene dos mercados, el local y el nacional. La actualización tenia que funcionar con estos dos
+            mercados
           </p>
         </div>
       </div>
@@ -218,7 +223,7 @@
           <script src="https://player.vimeo.com/api/player.js"></script>
         </div>
         <div class="col-lg-6 bottom_15 top_60 bottom_60">
-          <h3 class="subtitle bottom_30 white-text">National</h3>
+          <h3 class="subtitle bottom_30 white-text">Nacional</h3>
           <div style="padding: 100% 0 0 0; position: relative;">
             <iframe class="round-corners" src="https://player.vimeo.com/video/218702874?title=0&byline=0&portrait=0"
               style="
@@ -236,7 +241,7 @@
 
     <section data-midnight="white" class="white-bg">
       <div class="project-detail container">
-        <h3 class="text no-gutter text-center subtitle">Video Graphics</h3>
+        <h3 class="text no-gutter text-center subtitle">Gráficos para vídeos</h3>
       </div>
     </section>
 
@@ -286,7 +291,7 @@
     <section data-midnight="white" class="white-bg">
       <div class="project-detail">
         <h3 class="text subtitle text-center padbot_60">
-          Video editing guide
+          Guías de edición de vídeos
         </h3>
 
         <div class="container">
@@ -335,7 +340,7 @@
     </div>
     <section data-midnight="white" class="white-bg">
       <div class="project-detail">
-        <h3 class="subtitle text-center">Social media styleguide</h3>
+        <h3 class="subtitle text-center">Guías de estilo para sus medios sociales</h3>
       </div>
     </section>
 
@@ -345,8 +350,8 @@
 
     <section class="white-bg">
       <div class="col-lg-12 text-center">
-        <a class="next-link" href="Biodiversity-Festival.html">
-          <div class="nav-title">Next Work</div>
+        <a class="next-link" href="es-Biodiversity-Festival.html">
+          <div class="nav-title">Siguiente</div>
           <div class="next-title">Biodiversity Festival</div>
         </a>
       </div>
@@ -354,10 +359,11 @@
 
     <!-- footer -->
     <section id="contact" data-midnight="dark" class="dark-bg">
-      <div class="container project-detail padtop_30">
+      <div class="container project-detail padtop_15">
         <div class="row lightbox-gallery">
+
           <div class="col-lg-4">
-            <h2 class="white-text subtitle bottom_30">Contac Info.</h2>
+            <h2 class="white-text subtitle bottom_30">Contacto</h2>
           </div>
 
           <div class="col-lg-2 bottom_30">
@@ -367,10 +373,10 @@
             <a href="tel:+1571-295-1415">+1 571 295 1415</a>
           </div>
           <div class="col-lg-2 bottom_30">
-            <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i> </a>
+            <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                 aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble"
+            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
                 aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
@@ -378,6 +384,7 @@
           <div class="col-lg-2 bottom_30">
             <p class="copyright">© Peter Verastegui</p>
           </div>
+
         </div>
       </div>
       </div>
