--- a/es.html
+++ b/es.html
@@ -106,16 +106,18 @@
         </div>
         <div class="col-lg-4">
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-Galaxy.html">
+            <a href="Galaxy.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/Galaxy/Galaxy-Thumb-2.png" alt="">
             </a>
           </div>
+
           <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-Library-of-Congress.html">
+            <a href="Library-of-Congress.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-7/LOC-Cover-IMG.png"
                 alt="Library of Congress">
             </a>
           </div>
+
         </div>
       </div>
 
@@ -124,21 +126,23 @@
 
         <div class="col-lg-4">
           <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-USA-Today.html">
+            <a href="USA-Today.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-1/work-1-Thumb-7.png"
                 alt="USA Today Brand Refresh">
             </a>
           </div>
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-Gallo-Guapo.html">
+            <a href="Gallo-Guapo.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-5/Gallo-Guapo-Thumb-Nail-2.png"
                 alt="">
             </a>
           </div>
 
+
+
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-Biodiversity-Festival.html">
+            <a href="Biodiversity-Festival.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif"
                 alt="Bat Flying Animation">
             </a>
@@ -152,21 +156,21 @@
         <div class="col-lg-4">
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-Creating-Change.html">
+            <a href="Creating-Change.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-8/Creating-Change-2.png"
                 alt="Creating Change">
             </a>
           </div>
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-UI-UX-Illustrations.html">
+            <a href="UI-UX-Illustrations.html">
               <img class="round-corners bottom_60 plus-cursor"
                 src="img/works/UI-UX-Illustration/UI-UX-Illustrations-Thumbnail.png" alt="UI/UI Illustration">
             </a>
           </div>
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-Storytelling-Bootcamp.html">
+            <a href="Storytelling-Bootcamp.html">
               <img class="round-corners bottom_60 plus-cursor"
                 src="img/works/work-4/Storytelling-Bootcamp-thumbnail.png" alt="Woman diving photo by Dave McAloney">
             </a>
@@ -180,7 +184,7 @@
 
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-Racing-Extinction.html">
+            <a href="Racing-Extinction.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg"
                 alt="">
             </a>
