--- a/es-Creating-Change.html
+++ b/es-Creating-Change.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-  <title>Peter Verastegui | Portfolio</title>
+  <title>Peter Verastegui | Portfalio</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Peter Verastegui's Portofolio">
-  <meta name="keywords" content="personal, portfolio">
+  <meta name="description" content="Portafolio de Peter Verastegui">
+  <meta name="keywords" content="Portfolio, personal, diseño, UI,UX, Animacion Digital">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Portafolio de Peter Verastegui" />
+  <meta property="og:image" content="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" />
 
 
   <!-- Stylesheets -->
@@ -14,12 +16,12 @@
   <link rel="stylesheet" href="css/style.css" />
 
   <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
 
-  <!-- FAVICON  -->
-  <link rel="shortcut icon" href="img/favico.png">
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="img/favico.ico">
 
   <!-- Font icons -->
   <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
@@ -30,7 +32,6 @@
 </head>
 
 <body>
-
   <!-- Preloader -->
   <div id="preloader">
     <svg width="60px" height="60px" viewBox="0 0 100 100">
@@ -42,13 +43,13 @@
       </path>
     </svg>
   </div>
-
   <main>
 
-    <!-- Header
+
+    <!-- HEADER
 ================================================== -->
     <header>
-      <a href="index.html" class="logo float-left"></a>
+      <a href="es.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -64,16 +65,16 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="index.html#portfolio">Portfolio</a>
+              <a href="es.html#portfolio">Portafolio</a>
             </li>
             <li class="scroll">
-              <a href="index.html#about">About</a>
+              <a href="es.html#about">Acerca de mi</a>
             </li>
             <li class="scroll">
-              <a href="index.html#resume">Resume</a>
+              <a href="es.html#resume">Currículum Vitae</a>
             </li>
             <li class="scroll">
-              <a href="index.html#contact">Contact Information</a>
+              <a href="#contact">Contacto</a>
             </li>
           </ul>
         </div>
@@ -83,16 +84,20 @@
     <!-- Up to top -->
     <div class="uptotop">
       <div class="holder">
-        <span>Up to top</span>
+        <span>Ir arriba</span>
         <div class="arrow"></div>
       </div>
     </div>
+
+
+
+
 
     <!-- Hero Section - Start ================================================== -->
     <div class="hero load" data-midnight="dark" style="height: 963px;">
       <div class="hero-content">
         <div class="inner">
-          <h1 class="title">Creating Change</h1>
+          <h1 class="title">Creando Cambio</h1>
           <span class="category">Branding</span>
         </div>
       </div>
@@ -107,7 +112,7 @@
             style="fill:none;stroke:#F2F2F2;stroke-width:20px;"></path>
         </svg>
       </div>
-      <div class="hero-image" style="background-image: url(img/works/work-8/CC-2015-Hero-IMG.jpg);"></div>
+      <div class="hero-image" style="background-image: url(img/works/work-8/Hero-IMG.jpg);"></div>
     </div>
     <!-- Hero Section - End ================================================== -->
 
@@ -117,20 +122,21 @@
       <div class="container project-detail">
         <div class="row lightbox-gallery text">
           <div class="col-lg-8">
-            <h2 class="title bottom_30">Creating Change</h2>
-            <p>Creating Change is a pro bono initiative from Discovery Communications. This Program harnesses the
-              creative team, strategic thinking, and generous spirit of Discovery employees to help nonprofits with
-              marketing, communications, and operational needs. The Program consists of a 12-hour marathon and
-              conference at Discovery, then the following day it culminates with a final project-presentation for the
-              non profits participating.</p>
+            <h2 class="title bottom_30">Creando Cambio</h2>
+            <p>"Creando Cambio" es una iniciativa pro bono de Discovery que ocurre una ves al año, la iniciativa
+              consiste en prestar el talento de sus empleados y su espíritu generoso para ayudar organizaciones sin
+              fines de lucro con marketing, comunicación y estrategias digitales. El evento principal de "Creando
+              Cambio" dura dos días, el primer día comienza con una conferencia seguida por una maratón de trabajo de 12
+              horas, el día dos culmina con la presentación de los proyectos producidos para las organizaciones. Aquel
+              año mi propuesta del branding para "Creando Cambio" fue elegida y implementada.</p>
           </div>
           <div class="col-lg-4">
-            <h2 class="title bottom_30">Credits</h2>
-            <p>Account Director: Anna Anagnostopoulos,
-              <br>Acct. Coordinator: Christina Carr,
-              <br>Creative Director: Janet Daniel,
-              <br>Copy Editor: Shaun Gholston,
-              <br>Designer: Peter Verastegui</p>
+            <h2 class="title bottom_30">Créditos</h2>
+            <p>Director de cuenta: Anna Anagnostopoulos,
+              <br>Coordinadora: Christina Carr,
+              <br>Directora Creativa: Janet Daniel,
+              <br>Redactor: Shaun Gholston,
+              <br>Diseñador: Peter Verastegui</p>
           </div>
         </div>
       </div>
@@ -138,26 +144,12 @@
 
     <!-- ================= Work Intro / Credits - End ============================ -->
 
-    <!-- ======= Full Screen Image  / Start ========== -->
-    <div data-midnight="white">
-      <img class="img-fluid" src="img/works/work-8/PEOPLE-CC2015.jpg" alt="Social video styleguide">
-    </div>
-    <!-- ======= Full Screen Image / End ========== -->
-
-
-    <!-- ======= Full Screen Image  / Start ========== -->
-    <div data-midnight="white" class="white-bg">
-      <img class="img-fluid padding_30" src="img/works/work-8/Pin-CC2015.jpg" alt="Social video styleguide">
-    </div>
-    <!-- ======= Full Screen Image / End ========== -->
-
 
     <!-- ======= Full Screen Image  / Start ========== -->
     <div data-midnight="dark">
       <img class="img-fluid" src="img/works/work-8/Speaker.jpg" alt="Social video styleguide">
     </div>
     <!-- ======= Full Screen Image / End ========== -->
-
 
     <!--======= 3 Images - Without Padding ======= -->
 
@@ -173,6 +165,19 @@
     </div>
     <!-- ======= 3 Images - Without Padding ======= -->
 
+
+
+    <!-- ======= Full Screen Image  / Start ========== -->
+    <div data-midnight="white">
+      <img class="img-fluid" src="img/works/work-8/PEOPLE-CC2015.jpg" alt="Social video styleguide">
+    </div>
+    <!-- ======= Full Screen Image / End ========== -->
+
+
+
+
+
+
     <!-- ======= Full Screen Image  / Start ========== 
     <div data-midnight="white">
       <img class="img-fluid" src="img/works/work-8/Creating-Change-Food-Conference-room-sign.jpg"
@@ -183,21 +188,21 @@
 
 
     <!-- ======= Full Screen Image  / Start ========== -->
-    <div data-midnight="white" class="white-bg">
+    <div data-midnight="white" class="white-bg top_30">
       <img class="img-fluid" src="img/works/work-8/ANIMATION-CREATING-CHANGE.gif" alt="Social video styleguide">
     </div>
     <!-- ======= Full Screen Image / End ========== -->
 
 
     <!-- ======= 3 Images - Without Padding ======= Start-->
-    <div data-midnight="dark" class="row lightbox-gallery padtop_30 white-bg">
+    <div data-midnight="dark" class="row top_30 lightbox-gallery white-bg">
       <div class="col-lg-4">
-        <div class="image bottom_30">
+        <div class="image">
           <img src="img/works/work-8/meeting-room.png" alt="Stand">
         </div>
       </div>
       <div class="col-lg-4">
-        <div class="image bottom_30">
+        <div class="image">
           <img src="img/works/work-8/Team-Posing.png" alt="Stand">
         </div>
       </div>
@@ -209,14 +214,20 @@
     </div>
     <!-- ======= 3 Images - Without Padding ======= End-->
 
+    <!-- ======= Full Screen Image  / Start ========== -->
+    <div data-midnight="white" class="white-bg">
+      <img class="img-fluid padding_30" src="img/works/work-8/Pin-CC2015.jpg" alt="Social video styleguide">
+    </div>
+    <!-- ======= Full Screen Image / End ========== -->
+
+
     <div data-midnight="white" class="row white-bg">
       <div class="col-lg-6">
-        <img class="image img-fluid bottom_30" src="img/works/work-8/Hoddies.jpg" alt="Logo">
+        <img class="image img-fluid" src="img/works/work-8/Hoddies.jpg" alt="Logo">
       </div>
 
       <div class="col-lg-6">
-        <img class="image img-fluid bottom_30" src="img/works/work-8/Creating-Change-Food-Conference-room-sign.jpg"
-          alt="Opening">
+        <img class="image img-fluid" src="img/works/work-8/Creating-Change-Food-Conference-room-sign.jpg" alt="Opening">
       </div>
     </div>
 
@@ -225,20 +236,20 @@
     <!-- ======= Next Page / Start ========== -->
     <section class="white-bg">
       <div class="col-lg-12 text-center">
-        <a class=" next-link" href="Storytelling-Bootcamp.html">
-          <div class="nav-title">Next Work</div>
+        <a class=" next-link" href="es-Storytelling-Bootcamp.html">
+          <div class="nav-title">Siguiente</div>
           <div class="next-title">Storytelling Bootcamp</div>
         </a>
       </div>
     </section>
-    <!-- ======= Next Page / End ========== -->
 
     <!-- footer -->
     <section id="contact" data-midnight="dark" class="dark-bg">
-      <div class="container project-detail wow padtop_30">
+      <div class="container project-detail padtop_15">
         <div class="row lightbox-gallery">
+
           <div class="col-lg-4">
-            <h2 class="white-text subtitle bottom_30">Contac Info.</h2>
+            <h2 class="white-text subtitle bottom_30">Contacto</h2>
           </div>
 
           <div class="col-lg-2 bottom_30">
@@ -248,10 +259,10 @@
             <a href="tel:+1571-295-1415">+1 571 295 1415</a>
           </div>
           <div class="col-lg-2 bottom_30">
-            <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i> </a>
+            <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                 aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble"
+            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
                 aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
@@ -259,6 +270,7 @@
           <div class="col-lg-2 bottom_30">
             <p class="copyright">© Peter Verastegui</p>
           </div>
+
         </div>
       </div>
       </div>
