--- a/es-Gallo-Guapo.html
+++ b/es-Gallo-Guapo.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
-
-<html lang="en" class=" js no-touch cssanimations csstransitions">
+<html lang="es">
 
 <head>
-  <title>Peter Verastegui | Portofolio</title>
+  <title>Peter Verastegui | Portfalio</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Peter Verastegui's Portofolio">
-  <meta name="keywords" content="personal, portfolio">
+  <meta name="description" content="Portafolio de Peter Verastegui">
+  <meta name="keywords" content="Portfolio, personal, diseño, UI,UX, Animacion Digital">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Portafolio de Peter Verastegui" />
+  <meta property="og:image" content="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" />
 
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" />
 
   <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-      <![endif]-->
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
 
-  <!-- FAVICON  -->
-  <link rel="shortcut icon" href="img/favico.png">
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="img/favico.ico">
 
   <!-- Font icons -->
-  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css">
+  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -31,10 +32,8 @@
 </head>
 
 <body>
-  <div class="fadeffect"></div>
-
   <!-- Preloader -->
-  <div id="preloader" style="display: none;">
+  <div id="preloader">
     <svg width="60px" height="60px" viewBox="0 0 100 100">
       <path fill="none"
         d="M24.3,30C11.4,30,5,43.3,5,50s6.4,20,19.3,20c19.3,0,32.1-40,51.4-40 C88.6,30,95,43.3,95,50s-6.4,20-19.3,20C56.4,70,43.6,30,24.3,30z"
@@ -44,38 +43,18 @@
       </path>
     </svg>
   </div>
-
   <main>
 
-    <!-- Header
-  ================================================== -->
-    <header class="load" style="position: fixed; top: 0px; left: 0px; right: 0px; overflow: hidden; height: 111px;">
-      <div class="midnightHeader default"
-        style="position: absolute; overflow: hidden; top: 0px; left: 0px; right: 0px; bottom: 0px; transform: translateY(110%) translateZ(0px);">
-        <div class="midnightInner"
-          style="position: absolute; overflow: auto; top: 0px; left: 0px; right: 0px; bottom: 0px; transform: translateY(-110%) translateZ(0px);">
-          <a href="index.html" class="logo float-left"></a>
-          <div class="menu float-right">
-            <div class="nav-icon">
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="midnightHeader dark"
-        style="position: absolute; overflow: hidden; top: 0px; left: 0px; right: 0px; bottom: 0px; transform: translateY(0%) translateZ(0px);">
-        <div class="midnightInner"
-          style="position: absolute; overflow: auto; top: 0px; left: 0px; right: 0px; bottom: 0px; transform: translateY(0%) translateZ(0px);">
-          <a href="index.html" class="logo float-left"></a>
-          <div class="menu float-right">
-            <div class="nav-icon">
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
-          </div>
+
+    <!-- HEADER
+================================================== -->
+    <header>
+      <a href="es.html" class="logo float-left"></a>
+      <div class="menu float-right">
+        <div class="nav-icon">
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
       </div>
     </header>
@@ -86,47 +65,32 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="index.html#portfolio">Portfolio</a>
+              <a href="es.html#portfolio">Portafolio</a>
             </li>
             <li class="scroll">
-              <a href="index.html#about">About</a>
+              <a href="es.html#about">Acerca de mi</a>
             </li>
             <li class="scroll">
-              <a href="index.html#resume">Resume</a>
+              <a href="es.html#resume">Currículum Vitae</a>
             </li>
             <li class="scroll">
-              <a href="index.html#contact">Contact Information</a>
+              <a href="#contact">Contacto</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-
     <!-- Up to top -->
-    <div class="uptotop show"
-      style="position: fixed; top: 0px; left: 0px; right: 0px; overflow: hidden; height: 938px;">
-      <div class="midnightHeader default"
-        style="position: absolute; overflow: hidden; top: 0px; left: 0px; right: 0px; bottom: 0px; transform: translateY(110%) translateZ(0px);">
-        <div class="midnightInner"
-          style="position: absolute; overflow: auto; top: 0px; left: 0px; right: 0px; bottom: 0px; transform: translateY(-110%) translateZ(0px);">
-          <div class="holder">
-            <span>Up to top</span>
-            <div class="arrow"></div>
-          </div>
-        </div>
-      </div>
-      <div class="midnightHeader dark"
-        style="position: absolute; overflow: hidden; top: 0px; left: 0px; right: 0px; bottom: 0px; transform: translateY(0%) translateZ(0px);">
-        <div class="midnightInner"
-          style="position: absolute; overflow: auto; top: 0px; left: 0px; right: 0px; bottom: 0px; transform: translateY(0%) translateZ(0px);">
-          <div class="holder">
-            <span>Up to top</span>
-            <div class="arrow"></div>
-          </div>
-        </div>
+    <div class="uptotop">
+      <div class="holder">
+        <span>Ir arriba</span>
+        <div class="arrow"></div>
       </div>
     </div>
+
+
+
 
     <!-- Hero Section - Start ================================================== -->
     <div class="hero load" data-midnight="dark" style="height: 963px;">
@@ -221,9 +185,9 @@
 
     <section class="white-bg">
       <div class="col-lg-12 text-center">
-        <a class="next-link" href="UI-UX-Illustrations.html">
-          <div class="nav-title">Next Work</div>
-          <div class="next-title">UI/UX Characters</div>
+        <a class="next-link" href="es-UI-UX-Illustrations.html">
+          <div class="nav-title">Siguiente</div>
+          <div class="next-title">UI/UX ilustración de personajes</div>
         </a>
       </div>
 
@@ -234,7 +198,7 @@
       <div class="container project-detail wow padtop_30">
         <div class="row lightbox-gallery">
           <div class="col-lg-4">
-            <h2 class="white-text subtitle bottom_30">Contac Info.</h2>
+            <h2 class="white-text subtitle bottom_30">Contacto</h2>
           </div>
 
           <div class="col-lg-2 bottom_30">
@@ -244,10 +208,10 @@
             <a href="tel:+1571-295-1415">+1 571 295 1415</a>
           </div>
           <div class="col-lg-2 bottom_30">
-            <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i> </a>
+            <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                 aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble"
+            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
                 aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
