--- a/es-Storytelling-Bootcamp.html
+++ b/es-Storytelling-Bootcamp.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-    <title>Peter Verastegui | Portfolio</title>
+    <title>Peter Verastegui | Portfalio</title>
     <meta charset="UTF-8">
-    <meta name="description" content="Peter Verastegui's Portofolio">
-    <meta name="keywords" content="personal, portfolio">
+    <meta name="description" content="Portafolio de Peter Verastegui">
+    <meta name="keywords" content="Portfolio, personal, diseño, UI,UX, Animacion Digital">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Portafolio de Peter Verastegui" />
+    <meta property="og:image" content="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" />
 
 
     <!-- Stylesheets -->
@@ -14,12 +16,12 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
 
-    <!-- FAVICON  -->
-    <link rel="shortcut icon" href="img/favico.png">
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="img/favico.ico">
 
     <!-- Font icons -->
     <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
@@ -30,7 +32,6 @@
 </head>
 
 <body>
-
     <!-- Preloader -->
     <div id="preloader">
         <svg width="60px" height="60px" viewBox="0 0 100 100">
@@ -42,13 +43,13 @@
             </path>
         </svg>
     </div>
-
     <main>
 
-        <!-- Header
+
+        <!-- HEADER
 ================================================== -->
         <header>
-            <a href="index.html" class="logo float-left"></a>
+            <a href="es.html" class="logo float-left"></a>
             <div class="menu float-right">
                 <div class="nav-icon">
                     <span></span>
@@ -64,31 +65,29 @@
                 <div class="menu-holder">
                     <ul class="navmenu">
                         <li class="scroll">
-                            <a href="index.html#portfolio">Portfolio</a>
+                            <a href="es.html#portfolio">Portafolio</a>
                         </li>
                         <li class="scroll">
-                            <a href="index.html#about">About</a>
+                            <a href="es.html#about">Acerca de mi</a>
                         </li>
                         <li class="scroll">
-                            <a href="index.html#resume">Resume</a>
+                            <a href="es.html#resume">Currículum Vitae</a>
                         </li>
                         <li class="scroll">
-                            <a href="index.html#contact">Contact Information</a>
+                            <a href="#contact">Contacto</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
 
-
         <!-- Up to top -->
         <div class="uptotop">
             <div class="holder">
-                <span>Up to top</span>
+                <span>Ir arriba</span>
                 <div class="arrow"></div>
             </div>
         </div>
-
 
         <!-- Hero Section
 ================================================== -->
@@ -122,20 +121,21 @@
                 <div class="row lightbox-gallery">
                     <div class="col-lg-8">
                         <h2 class="title bottom_30">Storytelling Bootcamp</h2>
-                        <p>For almost 130 years, the National Geographic Society has funded groundbreaking scientists
-                            and explorers and has helped them share their findings with the world. In an effort to
-                            provide their grantees with the knowledge, and skills, to continue sharing their work; the
-                            Storytelling Bootcamp initiative was created. These 'bootcamps' are workshops that teach the
-                            National Geographic explorers how to better communicate their work with a broad audience,
-                            and I had the pleasure of designing the look of all the material used in these workshops.
+                        <p>Durante mas de 130 años National Geographic ha financiado los proyectos de
+                            exploradores (científicos innovadores) y les ha ayudado a compartir sus hallazgos con el
+                            mundo. En un esfuerzo para proporcionar a sus exploradores el conocimiento y las habilidades
+                            para seguir compartiendo su trabajo se crearon los Storytelling Bootcamp. Estos 'bootcamps'
+                            son talleres que enseñan a los exploradores cómo comunicar mejor su trabajo a una amplia
+                            audiencia, yo tuve el placer de diseñar todos los materiales utilizado en estos talleres.
                         </p>
                     </div>
                     <div class="col-lg-4">
-                        <h2 class="subtitle bottom_30">Credits</h2>
-                        <p>Dir, Creative Strategy: Jeff Honea,
-                            <br>Creative Director: Christos DeVaris,
-                            <br>Copy Writer: Sarah DeLucia,
-                            <br>Designer: Peter Verastegui</p>
+                        <h2 class="subtitle bottom_30">Créditos</h2>
+                        <p>
+                            Director Creativo: Christos DeVaris,
+                            <br>Escritor Principal: Jeff Honea,
+                            <br>Redactor: Sarah DeLucia,
+                            <br> </p>
                     </div>
                 </div>
             </div>
@@ -191,12 +191,12 @@
             <img class="img-fluid" src="img/works/work-4/Top-10-tips-STORYTELLING-BOOTCAMP.png" alt="Take aways">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
-        <!--footer-->
+        <!--Next-->
 
         <section class=" white-bg">
             <div class="col-lg-12 text-center">
-                <a class="next-link" href="Racing-Extinction.html">
-                    <div class="nav-title">Next Work</div>
+                <a class="next-link" href="es-Racing-Extinction.html">
+                    <div class="nav-title">Siguiente</div>
                     <div class="next-title">Racing Extinction</div>
                 </a>
             </div>
@@ -204,10 +204,11 @@
 
         <!-- footer -->
         <section id="contact" data-midnight="dark" class="dark-bg">
-            <div class="container project-detail wow padtop_30">
+            <div class="container project-detail padtop_15">
                 <div class="row lightbox-gallery">
+
                     <div class="col-lg-4">
-                        <h2 class="white-text subtitle bottom_30">Contac Info.</h2>
+                        <h2 class="white-text subtitle bottom_30">Contacto</h2>
                     </div>
 
                     <div class="col-lg-2 bottom_30">
@@ -217,18 +218,19 @@
                         <a href="tel:+1571-295-1415">+1 571 295 1415</a>
                     </div>
                     <div class="col-lg-2 bottom_30">
-                        <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
+                        <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin"
                                 aria-hidden="true"></i> </a>
                         &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                                 aria-hidden="true"></i> </a>
-                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble"
-                                aria-hidden="true"></i> </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i
+                                class="fab fa-pinterest" aria-hidden="true"></i> </a>
                         &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i
                                 class="fab fa-instagram" aria-hidden="true"></i> </a>
                     </div>
                     <div class="col-lg-2 bottom_30">
                         <p class="copyright">© Peter Verastegui</p>
                     </div>
+
                 </div>
             </div>
             </div>
