Spanish Version Done
Good, come back later

--- a/es-Biodiversity-Festival.html
+++ b/es-Biodiversity-Festival.html
@@ -119,20 +119,20 @@
         <div class="row lightbox-gallery">
           <div class="col-lg-8">
             <h2 class="title bottom_30">Biodiversity Festival</h2>
-            <p>For this project I was asked to design a variety of deliverables for the events taking place in this
-              festival, I designed a full-page ad for the Express, lot of signs, some take-away items for the NatGeo
-              booth, and; my favorite, the brand for the closing event, which gave me a chance to create some
-              illustrations and an animation. The event was organized by the National Park Service and the National
-              Geographic Society. The festival took palce in the National Mall.</p>
+            <p>El Festival de Biodiversidad es un evento organizado por el servicio de parques nacionales de Estados
+              Unidos y National Geographic. El evento es una oportunidad para que los niños y sus padres aprendan acerca
+              de la naturalesa. Para este proyecto se me encargo el diseño de anuncios en el periódico, el
+              metro, carteles para el festival, y ;mi favorito, el diseño de la identidad visual del evento que cerró
+              el festival.</p>
           </div>
           <div class="col-lg-4">
-            <h2 class="title bottom_30">Credits</h2>
-            <p>Strategy/Marketing Director: Megan Petratis,
-              <br>Marketing Coordinator: Linda Chrapala,
-              <br>Copy Editor/Writer: Jeff Honea,
-              <br>Creative Director: Stos Devaris,
-              <br>Designer: Peter Verastegui,
-              <br>Designer: Mary Zolp
+            <h2 class="title bottom_30">Créditos</h2>
+            <p>Directora de Marketing: Megan Petratis,
+              <br>Coordinadora de Marketing: Linda Chrapala,
+              <br>Escritor Principal: Jeff Honea,
+              <br>Director Creativo: Stos Devaris,
+              <br>Diseñador: Peter Verastegui,
+              <br>Diseñadora: Mary Zolp
             </p>
           </div>
         </div>
@@ -173,22 +173,21 @@
         <div class="row lightbox-gallery">
           <div class="col-lg-6">
             <h2 class="title">Bug, Bats, & Brews</h2>
-            <p class="">(Grown Ups enternainment at night)</p>
-            <p>Bugs, Bats and Brews was an event where attendees, ages 21 and older, enjoyed some drinks, while host
-              Chris Duffy explored the funny side of animal behavior as he introduced cool people like National
-              Geographic photographer and explorer Anand Varma, Danielle Lee; animal behavior scientist , and
-              conservation biologist/bat expert Rob Mies. Together they talked about trending science myths and bats.
-              This event was for adults to experience the National Mall with a side of laughter, science, and live
-              music.</p>
+            <p class="">(Evento de clausura en la noche)</p>
+            <p>En este evento Chris Duffy, el anfitrión, exploro el lado humorístico de la conducta de los animales
+              mientras presentaba interesantes exploradores de National Geograpic como el fotógrafo Anand Varma, la
+              científica de comportamiento de animales Danielle Lee y el biólogo conservacionista y experto en
+              murciélagos Rob Mies. Juntos ellos hablaron acerca de los mitos mas comunes el la ciencia y acerca de los
+              murciélagos.</p>
 
           </div>
           <div class="col-lg-6">
             <h2 class="title">BioBlitz</h2>
-            <p class="">(Family event during the day)</p>
-            <p>BioBlitz is a fast-paced expedition to discover and document species that thrive in national parks, an
-              initiative that is already over 10 years old. This free national public event, brought together more than
-              200 scientists and naturalists, more than 2,600 students and friends, families; and future scientists, to
-              explore and celebrate biodiversity.</p>
+            <p class="">(Eventos para la familia durante el dia)</p>
+            <p>BioBlitz es un expedición acelerada en la cual se busca descubrir y documentar las especies que prosperan
+              el los parques naciones de Estados Unidos. Este evento que ocurre en todo el país trajo a mas de 200
+              científicos y naturalistas, mas de 2,600 estudiantes, y futuros científicos, a celebrar la biodiversidad
+              explorando sus parques locales.</p>
           </div>
 
         </div>
@@ -215,35 +214,26 @@
       <div class="container project-detail">
 
         <div class="row lightbox-gallery">
-          <div class="col-lg-12">
-            <h2 class="title">Animation</h2>
-            <p>The most fun I had on this project came at the time of animating the illustrations I created for the
-              brand. I also had the opportunity to attend the event itself. I have great memories of this job. I extened
-              spaceial thanks to Maya Moore for the photos of the evet which were cortesy of brightestyoungthings.com
+          <div class="col-lg-6">
+            <h2 class="title">Animación Digital</h2>
+            <p>La parte que mas disfrute en este Proyecto fue la de animar las ilustraciones que creé para la identidad
+              visual del evento de clausura. Yo tuve la oportunidad de asistir al evento y tengo unas lindas memorias de
+              este proyecto. Quiero agradecer a Maya Moore por las fotos del evento, las que fueron cortesía de
+              <a href="https://www.brightestyoungthings.com/">brightestyoungthings.com</a>
             </p>
           </div>
-        </div>
-      </div>
-    </section>
 
-    <!--======= 3 Images - Without Padding ======= -->
-    <div data-midnight="white" class="white-bg row lightbox-gallery">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-lg-8 offset-lg-2 col-md-8 offset-md-2 col-sm-8 offset-sm-2">
+          <div class="col-lg-6">
             <div class="image bottom_120">
               <img class="round-corners" src="img/works/work-6/Bugs-Bat-and-Brews.gif" alt="Stand">
             </div>
           </div>
         </div>
       </div>
-    </div>
-
     </section>
 
     <!-- ======= Full Screen Image  / Start ========== -->
-    <section data-midnight="dark" class="purple">
+    <section data-midnight="dark" class="green">
       <!-- Images -->
       <div class="image lightbox-gallery bottom_30">
         <!-- a image -->
