--- a/es-Creating-Change.html
+++ b/es-Creating-Change.html
@@ -151,19 +151,13 @@
     </div>
     <!-- ======= Full Screen Image / End ========== -->
 
-    <!--======= 3 Images - Without Padding ======= -->
-
-    <div data-midnight="white" class="row white-bg">
-      <div class="col-lg-6">
-        <img class="image img-fluid bottom_30 top_30" src="img/works/work-8/CLose-up-of-logo.png" alt="Logo">
-      </div>
-
-      <div class="col-lg-6">
-        <img class="image img-fluid bottom_30 top_30" src="img/works/work-8/Crowd-in-front-of-speaker.png"
-          alt="Opening">
-      </div>
+    <!-- ======= Full Screen Image  / Start ========== -->
+    <div data-midnight="white" class="white-bg top_30 bottom_30">
+      <img class="img-fluid align-content-center" src="img/works/work-8/ANIMATION-CREATING-CHANGE.gif"
+        alt="Animacin del Logo del evento">
     </div>
-    <!-- ======= 3 Images - Without Padding ======= -->
+    <!-- ======= Full Screen Image / End ========== -->
+
 
 
 
@@ -174,6 +168,18 @@
     <!-- ======= Full Screen Image / End ========== -->
 
 
+    <!--======= 3 Images - Without Padding ======= -->
+
+    <div data-midnight="white" class="row white-bg top_30">
+      <div class="col-lg-6">
+        <img class="image img-fluid bottom_30" src="img/works/work-8/CLose-up-of-logo.png" alt="Logo">
+      </div>
+
+      <div class="col-lg-6">
+        <img class="image img-fluid bottom_30" src="img/works/work-8/Crowd-in-front-of-speaker.png" alt="Opening">
+      </div>
+    </div>
+    <!-- ======= 3 Images - Without Padding ======= -->
 
 
 
@@ -187,26 +193,22 @@
 
 
 
-    <!-- ======= Full Screen Image  / Start ========== -->
-    <div data-midnight="white" class="white-bg top_30">
-      <img class="img-fluid" src="img/works/work-8/ANIMATION-CREATING-CHANGE.gif" alt="Social video styleguide">
-    </div>
-    <!-- ======= Full Screen Image / End ========== -->
+
 
 
     <!-- ======= 3 Images - Without Padding ======= Start-->
-    <div data-midnight="dark" class="row top_30 lightbox-gallery white-bg">
+    <div data-midnight="dark" class="row lightbox-gallery white-bg">
       <div class="col-lg-4">
-        <div class="image">
+        <div class="image bottom_30">
           <img src="img/works/work-8/meeting-room.png" alt="Stand">
         </div>
       </div>
       <div class="col-lg-4">
-        <div class="image">
+        <div class="image bottom_30">
           <img src="img/works/work-8/Team-Posing.png" alt="Stand">
         </div>
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 bottom_30">
         <div class="image">
           <img src="img/works/work-8/Creating-Change-Cofee-sign.png" alt="Stand">
         </div>
@@ -216,25 +218,26 @@
 
     <!-- ======= Full Screen Image  / Start ========== -->
     <div data-midnight="white" class="white-bg">
-      <img class="img-fluid padding_30" src="img/works/work-8/Pin-CC2015.jpg" alt="Social video styleguide">
+      <img class="img-fluid" src="img/works/work-8/Pin-CC2015.jpg" alt="Social video styleguide">
     </div>
     <!-- ======= Full Screen Image / End ========== -->
 
 
     <div data-midnight="white" class="row white-bg">
       <div class="col-lg-6">
-        <img class="image img-fluid" src="img/works/work-8/Hoddies.jpg" alt="Logo">
+        <img class="image img-fluid top_30" src="img/works/work-8/Hoddies.jpg" alt="Logo">
       </div>
 
       <div class="col-lg-6">
-        <img class="image img-fluid" src="img/works/work-8/Creating-Change-Food-Conference-room-sign.jpg" alt="Opening">
+        <img class="image img-fluid top_30" src="img/works/work-8/Creating-Change-Food-Conference-room-sign.jpg"
+          alt="Opening">
       </div>
     </div>
 
 
 
     <!-- ======= Next Page / Start ========== -->
-    <section class="white-bg">
+    <section class="white-bg" data-midnight="white">
       <div class="col-lg-12 text-center">
         <a class=" next-link" href="es-Storytelling-Bootcamp.html">
           <div class="nav-title">Siguiente</div>
