--- a/es-Galaxy.html
+++ b/es-Galaxy.html
@@ -125,7 +125,7 @@
       <div class="row lightbox-gallery">
 
         <div class="col-lg-4 col-md-12 col-sm-12 cl-xs-12">
-          <h2 class="title white-text">¿Por qué le tocó la pistola mas pequeña?</h2>
+          <h2 class="title white-text">¿Por qué la mas pequeña?</h2>
           <p class="white-text bottom_60">Para resumirlo: eso fue una mala experiencia de usuario. Pensando como un
             diseñador de experiencias dije «al agente "J" no solo le están jugando una broma, el esta siendo víctima de
             un proceso de integración ineficiente». Si se dan cuenta el llegó a ese lugar sin haber llenado ningún
