--- a/es-Library-of-Congress.html
+++ b/es-Library-of-Congress.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-  <title>Peter Verastegui | Portfolio</title>
+  <title>Peter Verastegui | Portfalio</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Peter Verastegui's Portofolio">
-  <meta name="keywords" content="personal, portfolio">
+  <meta name="description" content="Portafolio de Peter Verastegui">
+  <meta name="keywords" content="Portfolio, personal, diseño, UI,UX, Animacion Digital">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Portafolio de Peter Verastegui" />
+  <meta property="og:image" content="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" />
 
 
   <!-- Stylesheets -->
@@ -14,12 +16,12 @@
   <link rel="stylesheet" href="css/style.css" />
 
   <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
 
-  <!-- FAVICON  -->
-  <link rel="shortcut icon" href="img/favico.png">
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="img/favico.ico">
 
   <!-- Font icons -->
   <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
@@ -30,7 +32,6 @@
 </head>
 
 <body>
-
   <!-- Preloader -->
   <div id="preloader">
     <svg width="60px" height="60px" viewBox="0 0 100 100">
@@ -42,13 +43,13 @@
       </path>
     </svg>
   </div>
-
   <main>
 
-    <!-- Header
+
+    <!-- HEADER
 ================================================== -->
     <header>
-      <a href="index.html" class="logo float-left"></a>
+      <a href="es.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -64,16 +65,16 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="index.html#portfolio">Portfolio</a>
+              <a href="es.html#portfolio">Portafolio</a>
             </li>
             <li class="scroll">
-              <a href="index.html#about">About</a>
+              <a href="es.html#about">Acerca de mi</a>
             </li>
             <li class="scroll">
-              <a href="index.html#resume">Resume</a>
+              <a href="es.html#resume">Currículum Vitae</a>
             </li>
             <li class="scroll">
-              <a href="index.html#contact">Contact Information</a>
+              <a href="#contact">Contacto</a>
             </li>
           </ul>
         </div>
@@ -83,17 +84,21 @@
     <!-- Up to top -->
     <div class="uptotop">
       <div class="holder">
-        <span>Up to top</span>
+        <span>Ir arriba</span>
         <div class="arrow"></div>
       </div>
     </div>
+
+
+
+
 
     <!-- Hero Section
 ================================================== -->
     <div class="hero" data-midnight="dark">
       <div class="hero-content">
         <div class="inner">
-          <h1 class="title">Library of Congress</h1>
+          <h1 class="title">Biblioteca del Congreso</h1>
           <span class="category">UI/UX</span>
         </div>
       </div>
@@ -117,18 +122,19 @@
       <div class="container project-detail">
         <div class="row lightbox-gallery">
           <div class="col-lg-8 ">
-            <h2 class="title bottom_30">Website Navigation</h2>
-            <p>In this project I looked into the Library of Congress's website. My goal was to not only prototype a
-              responsive website for the library, but to think of the limitations that were implemented, and necessary,
-              in the original design. The basic navigation of the site was surprisingly coherent but among its negative
-              aspects there was a lack of visual hierarchy. The website in general was functional yet not very intuitive
-              when indicating where was the content coming from, and at times it was quite overwhelming. </p>
+            <h2 class="title bottom_30">Navegación Web</h2>
+            <p>En este proyecto busque mejorar la navegación en la pagina web de la biblioteca del congreso de los
+              Estados Unidos, al estudiar la pagina me di cuenta que la arquitectura de la información era
+              sorprendentemente coherente, una ves le das una oportunidad. Sin embargo la falta de jerarquía visual
+              hacia la navegación complicada. La pagina en general no era muy difícil de entender pero no era lo mas
+              intuitiva con respecto a ayudar al usuario a orientarse dentro de tanta información; la cual por momentos
+              se volvía abrumadora.</p>
           </div>
           <div class="col-lg-4 ">
-            <h2 class="title bottom_30">Credits</h2>
-            <p>School: Corcoran College of Art + Design,
+            <h2 class="title bottom_30">Créditos</h2>
+            <p>Universidad: Corcoran College of Art + Design,
               <br>Instructor: David Ramos,
-              <br>Student: Peter Verastegui</p>
+              <br>Estudiante: Peter Verastegui</p>
           </div>
         </div>
       </div>
@@ -156,16 +162,17 @@
       <div class="container project-detail">
         <div class="row lightbox-gallery">
           <div class="col-lg-6">
-            <h2 class="title bottom_30">Education</h2>
-            <p>In this section you'll find articles, lesson plans, and classroom material like videos and images. So a
-              new "search" and "advance search bar is needed, also a better list that display the result of a search.
+            <h2 class="title bottom_30">Educación</h2>
+            <p>En esta sección encontraras artículos, plantillas para lecciones, y material educativo como videos y
+              imágenes. Aquí se necesita una nueva barra de búsqueda y búsqueda avanzada, lo cual implica también una
+              nueva lista de resultados.
             </p>
           </div>
           <div class="col-lg-6">
-            <h2 class="title bottom_30">Visit</h2>
-            <p>in this section people can find about events like lectures, exhibits, concerts , tours, directions, maps,
-              and general information such as phone numbers for each department and hours of operation. This section
-              needs the most help.</p>
+            <h2 class="title bottom_30">Visitar</h2>
+            <p>En esta sección los usuarios encuentra información acerca de eventos como conferencias, exhibiciones,
+              conciertos, direcciones de los distintos edificios de la biblioteca, mapas, y información en general como
+              números de teléfono y horas de atención, esta parte es la que necesita de mas ayuda. </p>
           </div>
         </div>
     </section>
@@ -185,7 +192,7 @@
       </div>
     </section>
     <div data-midnight="white" class="project-detail padding_60">
-      <h3 class=" text subtitle text-center">Education</h3>
+      <h3 class=" text subtitle text-center">Educación</h3>
     </div>
 
     <section data-midnight="white" class="padding_90 lightgrey-bg">
@@ -202,7 +209,7 @@
     </section>
 
     <div data-midnight="white" class="project-detail padding_60">
-      <h3 class=" text subtitle text-center">Visit</h3>
+      <h3 class=" text subtitle text-center">Visitar</h3>
     </div>
 
     <section data-midnight="white" class="padding_90 lightgrey-bg">
@@ -217,10 +224,10 @@
         <!-- a image -->
       </div>
     </section>
-    <section>
+    <section data-midnight="white">
       <div class="col-lg-12 text-center">
-        <a class="next-link" href="Galaxy.html">
-          <div class="nav-title">Next Work</div>
+        <a class="next-link" href="es-Galaxy.html">
+          <div class="nav-title">Siguiente</div>
           <div class="next-title">Galaxy</div>
         </a>
       </div>
@@ -231,7 +238,7 @@
       <div class="container project-detail wow padtop_30">
         <div class="row lightbox-gallery">
           <div class="col-lg-4">
-            <h2 class="white-text subtitle bottom_30">Contac Info.</h2>
+            <h2 class="white-text subtitle bottom_30">Contacto</h2>
           </div>
 
           <div class="col-lg-2 bottom_30">
@@ -241,10 +248,10 @@
             <a href="tel:+1571-295-1415">+1 571 295 1415</a>
           </div>
           <div class="col-lg-2 bottom_30">
-            <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i> </a>
+            <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                 aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble"
+            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
                 aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
