--- a/es-Storytelling-Bootcamp.html
+++ b/es-Storytelling-Bootcamp.html
@@ -135,7 +135,8 @@
                             Director Creativo: Christos DeVaris,
                             <br>Escritor Principal: Jeff Honea,
                             <br>Redactor: Sarah DeLucia,
-                            <br> </p>
+                            <br>Diseñador: Peter Verastegui
+                        </p>
                     </div>
                 </div>
             </div>
