--- a/es-USA-Today.html
+++ b/es-USA-Today.html
@@ -140,8 +140,9 @@
           <div class="col-lg-4">
             <h2 class="title bottom_30">Créditos</h2>
             <p>
-              Directora de arte senior: Glenann Godden, <br />Desiñador: Peter
-              Verastegui, <br />Diseñador: Dylan Glenn
+              Directora de arte senior: Glenann Godden,
+              <br>Diseñador: Peter Verastegui,
+              <br>Diseñador: Dylan Glenn
             </p>
           </div>
         </div>
