--- a/es-Racing-Extinction.html
+++ b/es-Racing-Extinction.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-  <title>Peter Verastegui | Portfolio</title>
-  <meta charset="UTF-8" />
-  <meta name="description" content="Peter Verastegui's Portofolio" />
-  <meta name="keywords" content="personal, portfolio" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Peter Verastegui | Portfalio</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="Portafolio de Peter Verastegui">
+  <meta name="keywords" content="Portfolio, personal, diseño, UI,UX, Animacion Digital">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Portafolio de Peter Verastegui" />
+  <meta property="og:image" content="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" />
+
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
   <link rel="stylesheet" href="css/style.css" />
 
   <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
 
-  <!-- FAVICON  -->
-  <link rel="shortcut icon" href="img/favico.ico" />
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="img/favico.ico">
 
   <!-- Font icons -->
   <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
   <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+
 </head>
 
 <body>
@@ -39,12 +43,13 @@
       </path>
     </svg>
   </div>
-
   <main>
-    <!-- Header
+
+
+    <!-- HEADER
 ================================================== -->
     <header>
-      <a href="index.html" class="logo float-left"></a>
+      <a href="es.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -60,16 +65,16 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="index.html#portfolio">Portfolio</a>
+              <a href="es.html#portfolio">Portafolio</a>
             </li>
             <li class="scroll">
-              <a href="index.html#about">About</a>
+              <a href="es.html#about">Acerca de mi</a>
             </li>
             <li class="scroll">
-              <a href="index.html#resume">Resume</a>
+              <a href="es.html#resume">Currículum Vitae</a>
             </li>
             <li class="scroll">
-              <a href="index.html#contact">Contact Information</a>
+              <a href="#contact">Contacto</a>
             </li>
           </ul>
         </div>
@@ -79,10 +84,14 @@
     <!-- Up to top -->
     <div class="uptotop">
       <div class="holder">
-        <span>Up to top</span>
+        <span>Ir arriba</span>
         <div class="arrow"></div>
       </div>
     </div>
+
+
+
+
 
     <!-- Hero Section - Start
 ================================================== -->
@@ -122,25 +131,25 @@
         <div class="col-lg-8">
           <h2 class="title">Racing Extinction</h2>
           <p>
-            In the film Racing Extinction, Oscar®-winner director Louie
-            Psihoyos assembles a team of artists and activists with the intent
-            of showing the world never-before-seen images that expose issues
-            of endangered species and mass extinction. By the end of the film
-            one can expect to walk out with the buzzing thought that we are
-            the last generation with the chance to change the course of
-            history; to make a change and drift away from extinction we have
-            to start now, for the generations to come it would be too late to
-            make a difference.
+            En el documental 'Racing Extinction: Cuenta Regresiva' el director y ganador del Oscar® Louie Psihoyos juntó
+            a un equipo de artista y activistas con la intención de mostrar al mundo imágenes, nunca antes vistas, que
+            exponen problemas acerca de la siguiente extinción masiva que se nos viene. Al final del documental uno no
+            puedo volver a las calles sin dejar de pensar en el aterrorizante hecho de que somos la ultima generación
+            que tiene la oportunidad de cambiar el curso de la historia. Para evitar esta siguiente extinción masiva
+            témenos que comenzar ahora porque a las generaciones venideras se les será muy tarde para evitar esa
+            catástrofe. Este documental si que me hizo pensar y darme cuenta que estamos arruinando el único lugar que
+            podemos llamar nuestro hogar. Mi grano de arena para este proyecto fue ilustrar algunas de las miles
+            especies que dejaran de existir.
           </p>
         </div>
         <div class="col-lg-4">
-          <h2 class="title">Credits</h2>
+          <h2 class="title">Créditos</h2>
           <p>
-            Creative Director: Janet Daniel, <br />
-            Associate Creative Director: Beth Stewart, <br />
-            Photo Producer: Susan Wetherby, <br />
-            Copy Editor: Shaun Gholston, <br />
-            Designer: Peter Verastegui
+            Directora Creativa: Janet Daniel, <br />
+            Directora Creativa Junior: Beth Stewart, <br />
+            Productora de Fotos: Susan Wetherby, <br />
+            Redactor: Shaun Gholston, <br />
+            Diseñador: Peter Verastegui
           </p>
         </div>
       </div>
@@ -195,10 +204,10 @@
     </section>
     <!-- ======= portfolio carousel | End ======= -->
 
-    <section class="white-bg">
+    <section class="white-bg" data-midnight="white">
       <div class="col-lg-12 text-center">
-        <a class="next-link" href="Gallo-Guapo.html">
-          <div class="nav-title">Next Work</div>
+        <a class="next-link" href="es-Gallo-Guapo.html">
+          <div class="nav-title">Siguiente</div>
           <div class="next-title">Gallo Guapo</div>
         </a>
       </div>
@@ -209,7 +218,7 @@
       <div class="container project-detail wow padtop_30">
         <div class="row lightbox-gallery">
           <div class="col-lg-4">
-            <h2 class="white-text subtitle bottom_30">Contac Info.</h2>
+            <h2 class="white-text subtitle bottom_30">Contacto</h2>
           </div>
 
           <div class="col-lg-2 bottom_30">
@@ -219,10 +228,10 @@
             <a href="tel:+1571-295-1415">+1 571 295 1415</a>
           </div>
           <div class="col-lg-2 bottom_30">
-            <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i> </a>
+            <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                 aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble"
+            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
                 aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
