--- a/es-UI-UX-Illustrations.html
+++ b/es-UI-UX-Illustrations.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-    <title>Peter Verastegui | Portfolio</title>
-    <meta charset="UTF-8" />
-    <meta name="description" content="Peter Verastegui's Portofolio" />
-    <meta name="keywords" content="personal, portfolio" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Peter Verastegui | Portfalio</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Portafolio de Peter Verastegui">
+    <meta name="keywords" content="Portfolio, personal, diseño, UI,UX, Animacion Digital">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Portafolio de Peter Verastegui" />
+    <meta property="og:image" content="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" />
+
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
     <link rel="stylesheet" href="css/style.css" />
 
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
 
-    <!-- FAVICON  -->
-    <link rel="shortcut icon" href="img/favico.ico" />
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="img/favico.ico">
 
     <!-- Font icons -->
     <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+
 </head>
 
 <body>
@@ -39,12 +43,13 @@
             </path>
         </svg>
     </div>
-
     <main>
-        <!-- Header
+
+
+        <!-- HEADER
 ================================================== -->
         <header>
-            <a href="index.html" class="logo float-left"></a>
+            <a href="es.html" class="logo float-left"></a>
             <div class="menu float-right">
                 <div class="nav-icon">
                     <span></span>
@@ -60,16 +65,16 @@
                 <div class="menu-holder">
                     <ul class="navmenu">
                         <li class="scroll">
-                            <a href="index.html#portfolio">Portfolio</a>
+                            <a href="es.html#portfolio">Portafolio</a>
                         </li>
                         <li class="scroll">
-                            <a href="index.html#about">About</a>
+                            <a href="es.html#about">Acerca de mi</a>
                         </li>
                         <li class="scroll">
-                            <a href="index.html#resume">Resume</a>
+                            <a href="es.html#resume">Currículum Vitae</a>
                         </li>
                         <li class="scroll">
-                            <a href="index.html#contact">Contact Information</a>
+                            <a href="#contact">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -79,10 +84,13 @@
         <!-- Up to top -->
         <div class="uptotop">
             <div class="holder">
-                <span>Up to top</span>
+                <span>Ir arriba</span>
                 <div class="arrow"></div>
             </div>
         </div>
+
+
+
 
         <!-- Hero Section - Start
 ================================================== -->
@@ -122,20 +130,16 @@
 
         <div data-midnight="white" class="container project-detail padtop_60">
             <div class="row lightbox-gallery">
-                <div class="col-lg-8">
-                    <h2 class="title">UI/UX Characters</h2>
-                    <p>
-                        I had designed this characters after a talk my team has about what animals UX designers embody
-                        or channel the most. Obviously there were a lot of candidates, but what I took aways at the end
-                        was that there are lot of types of designers and no one animal can describe all. We all are
-                        different.
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <h2 class="title">Credits</h2>
-                    <p>
-                        Client: FINRA, <br />
-                        Designer: Peter Verastegui
+                <div class="col-lg-8 offset-2 top_30">
+                    <h2 class="title text-center">UI/UX personajes</h2>
+                    <p class="text-center">
+                        Yo ilustré estos personajes por dos razones, una porque soy súper fan del <a
+                            href="https://www.brosmind.com/">Estudio Brosmind<a> y luego por una charla que tuve con mi
+                                equipo en FINRA en la que platicamos acerca de los animales que representan a los
+                                diseñadores de experiencias, obviamente hubo un montón de opiniones. Lo que mas
+                                recuerdo de aquella platica es que todos somos distintos y no hay un animal que
+                                identifique a todos, por
+                                eso cree estos personajes.
                     </p>
                 </div>
             </div>
@@ -191,21 +195,22 @@
             </div>
         </section>
         <!-- project-detail end -->
-        <section>
-            <div class="col-lg-12 text-center">
-                <a class="next-link" href="Galaxy.html">
-                    <div class="nav-title">Next Work</div>
-                    <div class="next-title">Galaxy</div>
-                </a>
-            </div>
-        </section>
+
+        <div class="col-lg-12 text-center bottom_90" data-midnight="white">
+            <a class="next-link" href="es-Galaxy.html">
+                <div class="nav-title">Siguiente</div>
+                <div class="next-title">Galaxy</div>
+            </a>
+        </div>
+
 
         <!-- footer -->
         <section id="contact" data-midnight="dark" class="dark-bg">
-            <div class="container project-detail wow padtop_30">
+            <div class="container project-detail padtop_15">
                 <div class="row lightbox-gallery">
+
                     <div class="col-lg-4">
-                        <h2 class="white-text subtitle bottom_30">Contac Info.</h2>
+                        <h2 class="white-text subtitle bottom_30">Contacto</h2>
                     </div>
 
                     <div class="col-lg-2 bottom_30">
@@ -215,18 +220,19 @@
                         <a href="tel:+1571-295-1415">+1 571 295 1415</a>
                     </div>
                     <div class="col-lg-2 bottom_30">
-                        <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
+                        <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin"
                                 aria-hidden="true"></i> </a>
                         &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                                 aria-hidden="true"></i> </a>
-                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble"
-                                aria-hidden="true"></i> </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i
+                                class="fab fa-pinterest" aria-hidden="true"></i> </a>
                         &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i
                                 class="fab fa-instagram" aria-hidden="true"></i> </a>
                     </div>
                     <div class="col-lg-2 bottom_30">
                         <p class="copyright">© Peter Verastegui</p>
                     </div>
+
                 </div>
             </div>
             </div>
