--- a/es.html
+++ b/es.html
@@ -106,13 +106,13 @@
         </div>
         <div class="col-lg-4">
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Galaxy.html">
+            <a href="es-Galaxy.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/Galaxy/Galaxy-Thumb-2.png" alt="">
             </a>
           </div>
 
           <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Library-of-Congress.html">
+            <a href="es-Library-of-Congress.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-7/LOC-Cover-IMG.png"
                 alt="Library of Congress">
             </a>
@@ -126,14 +126,14 @@
 
         <div class="col-lg-4">
           <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="USA-Today.html">
+            <a href="es-USA-Today.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-1/work-1-Thumb-7.png"
                 alt="USA Today Brand Refresh">
             </a>
           </div>
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Gallo-Guapo.html">
+            <a href="es-Gallo-Guapo.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-5/Gallo-Guapo-Thumb-Nail-2.png"
                 alt="">
             </a>
@@ -142,7 +142,7 @@
 
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Biodiversity-Festival.html">
+            <a href="es-Biodiversity-Festival.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif"
                 alt="Bat Flying Animation">
             </a>
@@ -156,21 +156,21 @@
         <div class="col-lg-4">
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Creating-Change.html">
+            <a href="es-Creating-Change.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-8/Creating-Change-2.png"
                 alt="Creating Change">
             </a>
           </div>
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="UI-UX-Illustrations.html">
+            <a href="es-UI-UX-Illustrations.html">
               <img class="round-corners bottom_60 plus-cursor"
                 src="img/works/UI-UX-Illustration/UI-UX-Illustrations-Thumbnail.png" alt="UI/UI Illustration">
             </a>
           </div>
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Storytelling-Bootcamp.html">
+            <a href="es-Storytelling-Bootcamp.html">
               <img class="round-corners bottom_60 plus-cursor"
                 src="img/works/work-4/Storytelling-Bootcamp-thumbnail.png" alt="Woman diving photo by Dave McAloney">
             </a>
@@ -184,7 +184,7 @@
 
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Racing-Extinction.html">
+            <a href="es-Racing-Extinction.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg"
                 alt="">
             </a>
@@ -220,8 +220,9 @@
 
         <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
           <img class="round-corners" src="img/Profile-Peter-2.png" alt="Portrait of Peter">
-          <p class="padtop_60">Hola, soy Peter. un diseñador que empezó su carrera como un estudiante de arte realmente
-            curioso. Aquella curiosidad me llevo del diseño gráfico a la animación digital y de la animación al UX/UI.
+          <p class="padtop_60">Hola, soy Peter. un diseñador que empezó su carrera como un estudiante de arte lleno de
+            curiosidad. Aquella curiosidad me llevo del diseño gráfico a la animación digital y de la animación al
+            UX/UI.
             Hoy en día me doy cuenta que, sin importar el trabajo que tomo, siempre estoy diseñado experiencias y
             contando historias de una u otra manera. Para aprender mas acerca de mi visita mi <a
               href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank">blog</a>
@@ -355,7 +356,7 @@
         <!--  ================== SPACE DIV ===================== -->
 
         <div class="col-lg-8">
-          <a href="/es/CV_Peter Verastegui_Septiembre_(2020).pdf" download>
+          <a href="/cv/ Verastegui_Septiembre_(2020).pdf" download>
             <button class="site-btn" data-tilt> Descargar CV
               <i class="icon ion-md-arrow-down"></i>
             </button>
